radware/valentine/morning-lab-3/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: moose-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: moose-app
---
apiVersion: v1
kind: Service
metadata:
  name: bear-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bear-app
